--- a/_posts/2016-02-01-OSM-in-iOS.md
+++ b/_posts/2016-02-01-OSM-in-iOS.md
@@ -3,7 +3,7 @@ layout: post
 title:  "瓦片地图在iOS项目中的应用(一)
 "
 date:   2016-02-15 20:30:08 +0800
-categories: iOS
+tags: iOS
 ---
 这次来跟大家分享一下如何使用开源地图来做地图模块放入自己的App中.  
 这里需要普及一些知识.
